tests/errors/syn_method7.java
public class syn_method7 {
public static String main ( ) 
}
}